overflow issue

--- a/dosen.css
+++ b/dosen.css
@@ -1,5 +1,6 @@
 body{
     background-color: #f3f3f3;
+    overflow-x: hidden;
 }
 .our-team{
     padding: 0px;
